--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -54,6 +54,28 @@ add_test(
         --build ${CMAKE_BINARY_DIR}
         --target unit_tests)
 
+# Create a shared library that can be loaded dynamically at runtime.
+# Used in inner/resolve/resolve_proxy.cpp.
+file(GLOB_RECURSE srcs_inner_dll_v1 CONFIGURE_DEPENDS
+    "inner-dll/v1/*.cpp")
+add_library(test_inner_dll_v1 MODULE ${srcs_inner_dll_v1})
+target_link_libraries(test_inner_dll_v1 PUBLIC
+    cradle_inner)
+
+# Create a C++ header file defining the location of the dynamically-loaded test DLLs.
+set(test_dlls_dir_file "${intgen_src_dir}/cradle/test_dlls_dir.h")
+add_custom_command(
+    OUTPUT ${test_dlls_dir_file}
+    COMMAND ${CMAKE_COMMAND}
+        -D input_file=${CMAKE_CURRENT_SOURCE_DIR}/cmake/test_dlls_dir.h.in
+        -D output_file=${test_dlls_dir_file}
+        -D test_dlls_dir=$<TARGET_FILE_DIR:test_inner_dll_v1>
+        -P ${CMAKE_CURRENT_SOURCE_DIR}/cmake/test_dlls_dir.cmake
+    DEPENDS
+        ${CMAKE_CURRENT_SOURCE_DIR}/cmake/test_dlls_dir.cmake
+        ${CMAKE_CURRENT_SOURCE_DIR}/cmake/test_dlls_dir.h.in)
+add_custom_target(test_dlls_dir_target DEPENDS ${test_dlls_dir_file})
+
 # Define an object library covering the source files in inner/.
 file(GLOB_RECURSE test_srcs_inner CONFIGURE_DEPENDS
     "inner/*.cpp"
@@ -64,6 +86,8 @@ target_link_libraries(test_lib_inner PUBLIC
     cradle_rpclib_client
     cradle_inner
     Catch2::Catch2)
+add_dependencies(test_lib_inner 
+    test_dlls_dir_target)
 
 # Add the inner test runner.
 add_executable(inner_test_runner)
@@ -78,7 +102,10 @@ add_custom_target(
     inner_tests
     COMMAND $<TARGET_FILE:inner_test_runner>
     DEPENDS inner_test_runner)
-add_dependencies(inner_tests rpclib_server)
+add_dependencies(inner_tests
+    rpclib_server
+    copy_cradle_dlls
+    test_inner_dll_v1)
 add_test(
     NAME inner_tests
     COMMAND ${CMAKE_COMMAND}
@@ -177,7 +204,9 @@ target_include_directories(manual_test_runner PUBLIC
     ${generated_src_dir}
     ${int_gen_src_dir}
     src)
-add_dependencies(manual_test_runner deploy_dir_file_target)
+add_dependencies(manual_test_runner
+    deploy_dir_file_target
+    copy_cradle_dlls)
 target_link_libraries(manual_test_runner PRIVATE
     test_lib_manual
     test_lib_runner)
@@ -192,7 +221,9 @@ add_custom_target(
     COMMAND ${CMAKE_COMMAND} -E chdir all-unit-testing ${CMAKE_COMMAND} -E env CRADLE_DEPLOY_DIR=${CMAKE_CURRENT_BINARY_DIR} CRADLE_THINKNODE_API_TOKEN=${API_TOKEN} CRADLE_THINKNODE_DOCKER_AUTH=${DOCKER_AUTH} $<TARGET_FILE:all_unit_tests_runner>
     WORKING_DIRECTORY ${PROJECT_BINARY_DIR}
     DEPENDS all_unit_tests_runner)
-add_dependencies(all_unit_tests rpclib_server)
+add_dependencies(all_unit_tests
+    rpclib_server
+    copy_cradle_dlls)
 add_test(
     NAME all_unit_tests
     COMMAND ${CMAKE_COMMAND}
@@ -242,9 +273,44 @@ add_custom_target(
     benchmark_tests
     COMMAND $<TARGET_FILE:benchmark_test_runner>
     DEPENDS benchmark_test_runner)
-add_dependencies(benchmark_tests rpclib_server)
+add_dependencies(benchmark_tests
+    rpclib_server
+    copy_cradle_dlls)
 add_test(
     NAME benchmark_tests
     COMMAND ${CMAKE_COMMAND}
         --build ${CMAKE_BINARY_DIR}
         --target benchmark_tests)
+
+if(IS_MSVC)
+    # Copy CRADLE's DLLs to the directory containing the test executables.
+    # Third-party DLLs are already there.
+    # cppcoro is statically linked so has no DLL.
+    add_custom_target(copy_cradle_dlls
+        COMMAND ${CMAKE_COMMAND} -E echo "copy DLLs to $<TARGET_FILE_DIR:inner_test_runner>"
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            $<TARGET_FILE:cradle_inner>
+            $<TARGET_FILE:cradle_typing>
+            $<TARGET_FILE:lib_third_party>
+            $<TARGET_FILE:cradle_plugins_inner>
+            $<TARGET_FILE:cradle_plugins_typing>
+            $<TARGET_FILE:cradle_thinknode>
+            $<TARGET_FILE:cradle_plugins_thinknode>
+            $<TARGET_FILE:cradle_rpclib_client>
+            $<TARGET_FILE:cradle_websocket>
+            $<TARGET_FILE:cradle_external>
+        $<TARGET_FILE_DIR:inner_test_runner>)
+    add_dependencies(copy_cradle_dlls
+        cradle_inner
+        cradle_typing
+        lib_third_party
+        cradle_plugins_inner
+        cradle_plugins_typing
+        cradle_thinknode
+        cradle_plugins_thinknode
+        cradle_rpclib_client
+        cradle_websocket
+        cradle_external)
+else()
+    add_custom_target(copy_cradle_dlls)
+endif()
