Thinknode unit tests using v1 DLL

--- a/src/cradle-dll/CMakeLists.txt
+++ b/src/cradle-dll/CMakeLists.txt
@@ -1,4 +1,6 @@
-# Create a shared library that can be loaded dynamically at runtime.
+# Create a shared library containing a catalog of resolvers for Thinknode requests.
+# The library can be loaded dynamically at runtime. Unless it, or a successor, has been
+# loaded, serialized Thinknode requests cannot be resolved.
 # The library implements a number of versioned requests; a newer library could provide
 # requests with the same signature, but a newer implementation, and identified by newer uuids.
 file(GLOB_RECURSE srcs_thinknode_v1 CONFIGURE_DEPENDS
@@ -7,22 +9,14 @@ add_library(cradle_thinknode_v1 MODULE ${srcs_thinknode_v1})
 target_link_libraries(cradle_thinknode_v1 PUBLIC
     cradle_thinknode)
 
-file(GLOB_RECURSE srcs_thinknode_v2 CONFIGURE_DEPENDS
-    "thinknode-v2/*.cpp")
-add_library(cradle_thinknode_v2 MODULE ${srcs_thinknode_v2})
-target_link_libraries(cradle_thinknode_v2 PUBLIC
-    cradle_thinknode)
-
 # Copy the Thinknode DLLs to the directory containing the main DLLs.
 add_custom_target(copy_thinknode_dlls
     COMMAND ${CMAKE_COMMAND} -E echo "copy DLLs to $<TARGET_FILE_DIR:cradle_thinknode>"
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
         $<TARGET_FILE:cradle_thinknode_v1>
-        $<TARGET_FILE:cradle_thinknode_v2>
     $<TARGET_FILE_DIR:cradle_thinknode>)
 add_dependencies(copy_thinknode_dlls
-    cradle_thinknode_v1
-    cradle_thinknode_v2)
+    cradle_thinknode_v1)
 
 # Create a C++ header file defining the location of the (copied) Thinknode DLLs.
 set(thinknode_dlls_dir_file "${intgen_src_dir}/cradle/thinknode_dlls_dir.h")
