--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -37,8 +37,7 @@ target_include_directories(unit_test_runner PUBLIC
 target_link_libraries(unit_test_runner PRIVATE
     test_lib_runner
     test_lib_unit
-    cradle_inner
-    cradle_plugins_thinknode)
+    cradle_inner)
 add_dependencies(unit_test_runner
     copy_thinknode_dlls)
 
@@ -182,8 +181,7 @@ add_library(test_lib_plugins OBJECT ${test_srcs_plugins})
 target_link_libraries(test_lib_plugins PUBLIC
     cradle_external
     cradle_plugins_typing
-    cradle_plugins_inner
-    cradle_plugins_thinknode)
+    cradle_plugins_inner)
 
 # Add the plugins test runner.
 add_executable(plugins_test_runner)
@@ -304,7 +302,6 @@ target_sources(benchmark_test_runner PRIVATE
 target_link_libraries(benchmark_test_runner PRIVATE
     test_lib_benchmark
     cradle_plugins_typing
-    cradle_plugins_thinknode
     cradle_plugins_inner)
 add_dependencies(benchmark_test_runner
     copy_thinknode_dlls)
@@ -335,7 +332,6 @@ if(IS_MSVC)
             $<TARGET_FILE:cradle_plugins_inner>
             $<TARGET_FILE:cradle_plugins_typing>
             $<TARGET_FILE:cradle_thinknode>
-            $<TARGET_FILE:cradle_plugins_thinknode>
             $<TARGET_FILE:cradle_rpclib_client>
             $<TARGET_FILE:cradle_websocket>
             $<TARGET_FILE:cradle_external>
@@ -347,7 +343,6 @@ if(IS_MSVC)
         cradle_plugins_inner
         cradle_plugins_typing
         cradle_thinknode
-        cradle_plugins_thinknode
         cradle_rpclib_client
         cradle_websocket
         cradle_external)
